--- a/templates/edit_config.html
+++ b/templates/edit_config.html
@@ -122,6 +122,7 @@
                             </div>
                         </div>
                         <div class="form-group-poetic full-width"><label class="form-label-poetic">URL Ảnh Lớn</label><input type="url" class="form-control-poetic" name="SHOP_EMBED_IMAGE_URL" value="{{ config.get('SHOP_EMBED_IMAGE_URL', '') }}"></div>
+                        <div class="form-group-poetic full-width"><label class="form-label-poetic">Footer</label><input type="text" class="form-control-poetic" name="FOOTER_MESSAGES[SHOP_PANEL]" value="{{ config.FOOTER_MESSAGES.get('SHOP_PANEL', '') }}"></div>
                     </div>
                     <hr/>
                     <h5 class="form-section-title">Embed Thông Tin Tài Khoản</h5>
@@ -136,6 +137,7 @@
                          </div>
                         <div class="form-group-poetic"><label class="form-label-poetic">Tên trường "Số dư"</label><input type="text" class="form-control-poetic" name="MESSAGES[BALANCE_FIELD_NAME]" value="{{ config.MESSAGES.get('BALANCE_FIELD_NAME', 'Số Dư Hiện Tại') }}"></div>
                         <div class="form-group-poetic"><label class="form-label-poetic">Giá trị trường "Số dư"</label><input type="text" class="form-control-poetic" name="MESSAGES[BALANCE_FIELD_VALUE]" value="{{ config.MESSAGES.get('BALANCE_FIELD_VALUE', '{balance} coin') }}"><div class="form-text-poetic">Dùng <code>{balance}</code>.</div></div>
+                        <div class="form-group-poetic full-width"><label class="form-label-poetic">Footer</label><input type="text" class="form-control-poetic" name="FOOTER_MESSAGES[ACCOUNT_INFO]" value="{{ config.FOOTER_MESSAGES.get('ACCOUNT_INFO', '') }}"></div>
                     </div>
                     <hr/>
                     <h5 class="form-section-title">Embed Tỷ Lệ Đào Coin</h5>
